Java9 modularity-Chapter 2 and 3